//
//  QuizStrings.swift
//  MovieQuiz
//
//

enum QuizStrings {
    static let roundFinishedTitle = "Этот раунд окончен!"
    static let playAgainButton = "Сыграть ещё раз"
    
    static let currentResult = "Ваш результат:"
    static let totalPlays = "Количество сыгранных квизов:"
    static let bestGame = "Рекорд:"
    static let averageAccuracy = "Средняя точность:"
    
    static let errorMessage = "Ошибка"
    static let tryAgain = "Попробовать еще раз"
    static let newline = "\n"
}
